--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,5 @@
-import { Container, Flex, Button } from '@theme-ui/components'
-import { Mail, File } from 'react-feather'
-
-
+import { Container, Flex, Button } from '@theme-ui/components';
+import { Mail, File } from 'react-feather';
 
 <Container
   sx={{
@@ -17,14 +15,13 @@ import { Mail, File } from 'react-feather'
 
 <div>
 
-# Hi, I'm Adway. 
+# Hi, I'm Adway.
 
-I’m a junior at Saint John’s High School in Shrewsbury, Massachusetts. I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I conduct self-directed research projects and my work has been published in various venues. I've also presented my work at the Intel International Science and Engineering Fair and the national Junior Science and Humanities Symposium.
+I’m a junior at Saint John’s High School in Shrewsbury, Massachusetts. I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am interested in studying the COVID-19 pandemic from a social sciences standpoint. I will be analyzing the economic impact of COVID-19 through the [Coronavirus Visualization Team](https://scholar.harvard.edu/cvt/about). I am in the process of researching behavior and feeling related to COVID-19 through social media, independently. My work has been published in various venues and at national and international science research competitions.
 
 I am the 2019-2020 Photographer in Residence for the Town of Westborough. I document Westborough's history as it happens through photography. Specifically, I try to portray daily life through the eyes of young children. You can read my vision statement for this project [here](/vision.pdf). The photos that I take for this project will be posted [here](https://instagram.com/thewestborougharchive), although the account is not nearly as updated as it should be. At the end of my term, I will compile all of my photographs from the past year into a book, so that future citizens of Westborough and historians alike can take a look at what Westborough was like in the interesting time in which we live.
 
 Apart from my scientific research and my photography, I am a writer for the Community Advocate and the president of my school's mock trial team. I also enjoy helping others learn so I am a peer tutor in the academic center at my school.
-
 
 <Flex sx={{ 
   
@@ -33,22 +30,18 @@ Apart from my scientific research and my photography, I am a writer for the Comm
   
 }}>
 
-<Button as="a" variant="muted" href="mailto:adway@adway.io">
+<Button as='a' variant='muted' href='mailto:adway@adway.io'>
   <Mail />
   Email me
 </Button>
 
-<Button as="a" variant="muted" href="/Resume.pdf">
+<Button as='a' variant='muted' href='/Resume.pdf'>
   <File />
   View my resumé
-  
-  </Button>
+</Button>
 
 </Flex>
 
 </div>
 
 </Container>
-
-
-
