make fonts less overbearing, and figure out the textStyles nonsense --> everything has to do with the fact that everything is centered around the 'container' and that theme-ui usese theme.layout.container

--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -1,8 +1,8 @@
-import { Container } from '@theme-ui/components'
-import Meta from '../components/meta'
-import {Description} from '../components/description'
+import { Container } from '@theme-ui/components';
+import Meta from '../components/meta';
+import { Description } from '../components/description';
 
-<Meta title="Research" />
+<Meta title='Research' />
 
 <Container
   
@@ -18,26 +18,31 @@ import {Description} from '../components/description'
 # Research
 
 <Description>
-My research interests currently lie in understanding substance use disorders and mental illnesses. I have presented my work at a variety of science competitions, and my work has been published in in various venues as well.
+  My research interests currently lie in understanding substance use disorders
+  and mental illnesses. I have presented my work at a variety of science
+  competitions, and my work has been published in in various venues as well.
 </Description>
 
 ## Understanding the Etiology of Substance Use Disorders among Adolescents
+
 - ["Nature and Nurture: An Epidemiological Approach to Understanding the Etiology of Substance Use Disorders Among Adolescents"](https://drive.google.com/file/d/1YQ4q7meKBvRrOKHLzdFO9OjhdYpsjxAN/view?usp=sharing)
-  *To be presented at the Massachusetts Science and Engineering Fair and a working paper to be prepared for submission to a journal.*
+  _To be presented at the Massachusetts Science and Engineering Fair and a working paper to be prepared for submission to a journal._
 
 ## Predicting and Understanding Opioid Use Disorder
 
 - ["Understanding Opioid Use Disorder using tree-based classifiers”](https://doi.org/10.1016/j.drugalcdep.2020.107839)
-  *Drug and Alcohol Dependence, March 2020*
+  _Drug and Alcohol Dependence, March 2020_
 - ["Predicting Opioid Use Disorder (OUD) Using A Random Forest"](https://doi.org/10.1109/COMPSAC.2019.00161)
-  *Proc. of IEEE COMPSAC, July 2019*
+  _Proc. of IEEE COMPSAC, July 2019_
 
 ## Predicting and Understanding Suicidal Ideation
+
 - “Predicting Suicidal Ideation using Decision Trees”
-  *Presented paper at the National Junior Science and Humanities Symposium*
+  _Presented paper at the National Junior Science and Humanities Symposium_
 
 ## The Demographic Divide in Advanced Placement Subjects
+
 - ["Grade-level participation in the AP curriculum"](https://doi.org/10.1109/ISECon.2018.8340512)
-  *Proc. of IEEE Integrated STEM Education Conference, March 2018*
+  _Proc. of IEEE Integrated STEM Education Conference, March 2018_
 
 </Container>
