Add blog to main site

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-import { Container, Flex, Button } from '@theme-ui/components';
+import { Container, Flex, Button, Box } from '@theme-ui/components';
 import { Mail, File } from 'react-feather';
 
 <Container
