--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,7 +21,7 @@ I’m a junior at Saint John’s High School in Shrewsbury, Massachusetts. I am 
 
 I am the 2019-2020 Photographer in Residence for the Town of Westborough. I document Westborough's history as it happens through photography. Specifically, I try to portray daily life through the eyes of young children. You can read my vision statement for this project [here](/vision.pdf). The photos that I take for this project will be posted [here](https://instagram.com/thewestborougharchive), although the account is not nearly as updated as it should be. At the end of my term, I will compile all of my photographs from the past year into a book, so that future citizens of Westborough and historians alike can take a look at what Westborough was like in the interesting time in which we live.
 
-Apart from my scientific research and my photography, I am a writer for the Community Advocate and the president of my school's mock trial team. This summer, I plan on attending the New England High School Journalism Collaborative Summer Workshop. I also enjoy helping others learn so I am a peer tutor in the academic center at my school.
+Apart from my scientific research and my photography, I am a writer for the Community Advocate and the president of my school's mock trial team. This summer, I am attending the New England High School Journalism Collaborative Summer Workshop and beginning research at McLean Hospital of Harvard Medical school. I also enjoy helping others learn so I am a peer tutor in the academic center at my school.
 
 <Flex sx={{ 
   
