--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -17,7 +17,7 @@ import { Mail, File } from 'react-feather';
 
 # Hi, I'm Adway.
 
-I’m a junior at Saint John’s High School in Shrewsbury, Massachusetts. I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am interested in studying the COVID-19 pandemic from a social sciences standpoint. I will be analyzing the economic impact of COVID-19 through the [Coronavirus Visualization Team](https://scholar.harvard.edu/cvt/about). I am in the process of researching behavior and feeling related to COVID-19 through social media, independently. My work has been published in various venues and at national and international science research competitions.
+I’m a rising senior at Saint John’s High School in Shrewsbury, Massachusetts. I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am interested in studying the COVID-19 pandemic from a social sciences standpoint. I will be analyzing the economic impact of COVID-19 through the [Coronavirus Visualization Team](https://scholar.harvard.edu/cvt/about). I am in the process of researching behavior and feeling related to COVID-19 through social media, independently. My work has been published in various venues and at national and international science research competitions.
 
 I am the 2019-2020 Photographer in Residence for the Town of Westborough. I document Westborough's history as it happens through photography. Specifically, I try to portray daily life through the eyes of young children. You can read my vision statement for this project [here](/vision.pdf). The photos that I take for this project will be posted [here](https://instagram.com/thewestborougharchive), although the account is not nearly as updated as it should be. At the end of my term, I will compile all of my photographs from the past year into a book, so that future citizens of Westborough and historians alike can take a look at what Westborough was like in the interesting time in which we live.
 
