--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,13 @@ import { Mail, File } from 'react-feather';
       }
   }}>
 
+<Box sx={{
+  display: ['none', 'block'],
+}}>
+
 ![Adway](/adway.jpg)
+
+</Box>
 
 <div>
 
