--- a/pages/writing.mdx
+++ b/pages/writing.mdx
@@ -21,12 +21,13 @@ import { Description } from '../components/description';
 # Writing
 
 <Description>
-  I write articles for the Community Advocate. Here are a few of the articles
-  that I've written over the years. I also take a variety of photos for the
-  Community Advocate, and those are featured in various Community Advocate
-  materials.
+  I write articles for the Community Advocate. Here is a collection of articles
+  that I have written that have been published. I also take photos for the
+  Community Advocate, which are published in a variety of their materials.
 </Description>
 
+- ["Westborough residents come together to hold peaceful vigil"](https://www.communityadvocate.com/2020/06/10/westborough-residents-come-together-to-hold-peaceful-vigil/)
+  _June 10, 2020_
 - ["In Your Shoes holds ‘Polar Plunge’ in conjunction with Westborough Connects"](https://www.communityadvocate.com/2020/01/01/in-your-shoes-holds-polar-plunge-in-conjunction-with-westborough-connects/)
   _January 1, 2020_
 - ["Shrewsbury’s St. John’s High School to welcome award-winning author Wes Moore"](https://www.communityadvocate.com/2019/11/12/shrewsburys-st-johns-high-school-to-welcome-award-winning-author-wes-moore/)
