--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -2,7 +2,7 @@ import { Container } from '@theme-ui/components';
 import Meta from '../components/meta';
 import { Description } from '../components/description';
 
-<Meta title='Writing' />
+<Meta title='Journalism' />
 <Container
   
   sx={{
@@ -18,7 +18,7 @@ import { Description } from '../components/description';
     
   }}>
 
-# Writing
+# Journalism
 
 <Description>
   I write articles for the Community Advocate. Here is a collection of articles
