--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -26,6 +26,8 @@ import { Description } from '../components/description';
   Community Advocate, which are published in a variety of their materials.
 </Description>
 
+- ["Westborough’s youth hold protest for Black Lives Matter movement"](https://www.communityadvocate.com/2020/06/24/westboroughs-youth-hold-protest-for-black-lives-matter-movement/)
+  _June 24, 2020_
 - ["Westborough residents come together to hold peaceful vigil"](https://www.communityadvocate.com/2020/06/10/westborough-residents-come-together-to-hold-peaceful-vigil/)
   _June 10, 2020_
 - ["In Your Shoes holds ‘Polar Plunge’ in conjunction with Westborough Connects"](https://www.communityadvocate.com/2020/01/01/in-your-shoes-holds-polar-plunge-in-conjunction-with-westborough-connects/)
