--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -1,4 +1,4 @@
-import { Container } from '@theme-ui/components';
+import { Container, Text } from '@theme-ui/components';
 import Meta from '../components/meta';
 import { Description } from '../components/description';
 
@@ -20,11 +20,26 @@ import { Description } from '../components/description';
 
 # Journalism
 
-<Description>
-  I write articles for the Community Advocate. Here is a collection of articles
-  that I have written that have been published. I also take photos for the
-  Community Advocate, which are published in a variety of their materials.
+<Description sx={{ em: { color: 'text', display: 'inline' } }}>
+  Below is a sample of news and opinion articles that I have published in
+  various venues. Most of my journalistic work is published in{' '}
+  <em>The Community Advocate</em>. This year, I attended the New England High
+  School Journalism Collaborative Summer Workshop where I produced{' '}
+  <em>The Vanguard</em> with my peers, writing for this newspaper as well.
 </Description>
+
+## The Vanguard
+
+- ["Just Miles Away but Worlds Apart: Education in the Time of the Coronavirus"](http://www.nehsjc.org/Vanguard/headline-goes-here-14/)
+  _June 26, 2020_
+
+- ["Protests Spotlight First Amendment Right to Peaceable Assembly"](http://www.nehsjc.org/Vanguard/headline-goes-here-13/)
+  _June 25, 2020_
+
+- ["Changing World, Changing Journalism" (co-written with Sofia Mendes)](http://www.nehsjc.org/Vanguard/headline-goes-here-11/)
+  _June 24, 2020_
+
+## The Community Advocate
 
 - ["Westborough’s youth hold protest for Black Lives Matter movement"](https://www.communityadvocate.com/2020/06/24/westboroughs-youth-hold-protest-for-black-lives-matter-movement/)
   _June 24, 2020_
