--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -23,11 +23,13 @@ import { Mail, File } from 'react-feather';
 
 # Hi, I'm Adway.
 
-I’m a rising senior at Saint John’s High School in Shrewsbury, Massachusetts. I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am interested in studying the COVID-19 pandemic from a social sciences standpoint. I will be analyzing the economic impact of COVID-19 through the [Coronavirus Visualization Team](https://scholar.harvard.edu/cvt/about). I am in the process of researching behavior and feeling related to COVID-19 through social media, independently. My work has been published in various venues and at national and international science research competitions.
+I’m a rising senior at Saint John’s High School in Shrewsbury, Massachusetts. I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am interested in studying the COVID-19 pandemic from a social sciences standpoint. I am in the process of researching behavior and feeling related to COVID-19 through social media, independently. My work has been published in various venues and at national and international science research competitions.
 
-I am the 2019-2020 Photographer in Residence for the Town of Westborough. I document Westborough's history as it happens through photography. Specifically, I try to portray daily life through the eyes of young children. You can read my vision statement for this project [here](/vision.pdf). The photos that I take for this project will be posted [here](https://instagram.com/thewestborougharchive), although the account is not nearly as updated as it should be. At the end of my term, I will compile all of my photographs from the past year into a book, so that future citizens of Westborough and historians alike can take a look at what Westborough was like in the interesting time in which we live.
+Journalism offers me a very unique opportunity to engage with people by observing them in cultural and social settings. I am able to understand folks' hopes, dreams, and fears. My study of the human condition is complemented with exposure to the concerns and values of real people. Journalistic writing challenges me to get up from my desk, stop crunching numbers (and Doritos), and do some real-life learning. I am a writer and a photographer for the Community Advocate Newspaper and this year, I was accepted into the New England High School Journalism Collaborative Summer Workshop where my peers and I produced a newspaper in a week.
 
-Apart from my scientific research and my photography, I am a writer for the Community Advocate and the president of my school's mock trial team. This summer, I am attending the New England High School Journalism Collaborative Summer Workshop and beginning research at McLean Hospital of Harvard Medical school. I also enjoy helping others learn so I am a peer tutor in the academic center at my school.
+My keen interest in journalism as well as history drove me to submit a portfolio to serve as the Photographer in Residence for the Town of Westborough. I document Westborough's history as it happens through photography. You can read my vision statement for this project [here](/vision.pdf). The photos that I take for this project will be posted [here](https://instagram.com/thewestborougharchive), although the account is not nearly as updated as it should be. At the end of my term (which will now officially end when the program is restructured after the pandemic), I will compile all of my photographs from the past year into a book and submit it to the Town archives. I am honored to create primary sources so that future citizens of Westborough and historians can take a look at what small-town Massachusetts was like years and years ago!
+
+Apart from my scientific research, my photography, and my journalistic writing, I am the president of my school's Mock Trial team. Constitutional law is a budding interest of mine, and pursuing Mock Trial allows me to pursue important issues such as first amendment rights and racial profiling. I enjoy teaching others and learning from them as well, so I am a peer tutor in the academic center at school.
 
 <Flex sx={{ 
   
