--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,7 +7,7 @@ import { Mail, File } from 'react-feather';
     em: { color: 'muted', display: 'block' },
     img: {
         maxWidth: ['30%', '20%'],
-        borderRadius: 'circle'
+        
       }
   }}>
 
@@ -15,7 +15,7 @@ import { Mail, File } from 'react-feather';
   display: ['none', 'block'],
 }}>
 
-![Adway](/adway.jpg)
+![Adway](/adway.png)
 
 </Box>
 
