--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -36,7 +36,7 @@ import { Description } from '../components/description';
 - ["Protests Spotlight First Amendment Right to Peaceable Assembly"](http://www.nehsjc.org/Vanguard/headline-goes-here-13/)
   _June 25, 2020_
 
-- ["Changing World, Changing Journalism" (co-written with Sofia Mendes)](http://www.nehsjc.org/Vanguard/headline-goes-here-11/)
+- ["Changing World, Changing Journalism" (with Sofia Mendes)](http://www.nehsjc.org/Vanguard/headline-goes-here-11/)
   _June 24, 2020_
 
 ## The Community Advocate
