--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -23,7 +23,7 @@ import { Mail, File } from 'react-feather';
 
 # Hi, I'm Adway.
 
-I’m a rising senior at Saint John’s High School in Shrewsbury, Massachusetts. I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am interested in studying the COVID-19 pandemic from a social sciences standpoint. I am in the process of researching behavior and feeling related to COVID-19 through social media, independently. My work has been published in various venues and at national and international science research competitions.
+I’m a rising senior at Saint John’s High School in Shrewsbury, Massachusetts (view class notes [here](https://notes.adway.io)). I am interested in studying the human condition using a quantitative approach. Right now, my research interests lie in using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am interested in studying the COVID-19 pandemic from a social sciences standpoint. I am in the process of researching behavior and feeling related to COVID-19 through social media, independently. My work has been published in various venues and at national and international science research competitions.
 
 Journalism offers me a very unique opportunity to engage with people by observing them in cultural and social settings. I am able to understand folks' hopes, dreams, and fears. My study of the human condition is complemented with exposure to the concerns and values of real people. Journalistic writing challenges me to get up from my desk, stop crunching numbers (and Doritos), and do some real-life learning. I am a writer and a photographer for the Community Advocate Newspaper and this year, I was accepted into the New England High School Journalism Collaborative Summer Workshop where my peers and I produced a newspaper in a week.
 
