--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -41,6 +41,8 @@ import { Description } from '../components/description';
 
 ## The Community Advocate
 
+- ["Mass. Academy of Math and Science student earns trip to international science fair"](https://www.communityadvocate.com/2020/07/15/mass-academy-of-math-and-science-student-earns-trip-to-international-science-fair/)
+  _July 15, 2020_
 - ["Westborough’s youth hold protest for Black Lives Matter movement"](https://www.communityadvocate.com/2020/06/24/westboroughs-youth-hold-protest-for-black-lives-matter-movement/)
   _June 24, 2020_
 - ["Westborough residents come together to hold peaceful vigil"](https://www.communityadvocate.com/2020/06/10/westborough-residents-come-together-to-hold-peaceful-vigil/)
