--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -25,8 +25,8 @@ import { Description } from '../components/description';
 
 ## Understanding the Etiology of Substance Use Disorders among Adolescents
 
-- ["Nature and Nurture: An Epidemiological Approach to Understanding the Etiology of Substance Use Disorders Among Adolescents"](https://drive.google.com/file/d/1YQ4q7meKBvRrOKHLzdFO9OjhdYpsjxAN/view?usp=sharing)
-  _To be presented at the Massachusetts Science and Engineering Fair and a working paper to be prepared for submission to a journal._
+- ["A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"](https://drive.google.com/file/d/1YQ4q7meKBvRrOKHLzdFO9OjhdYpsjxAN/view?usp=sharing)
+  _Working paper_
 
 ## Predicting and Understanding Opioid Use Disorder
 
