--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -23,7 +23,7 @@ import { Description } from '../components/description';
   competitions, and my work has been published in in various venues as well.
 </Description>
 
-## Understanding the Etiology of Substance Use Disorders among Adolescents
+## Substance Use Among Adolescents
 
 - ["A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"](https://drive.google.com/file/d/1YQ4q7meKBvRrOKHLzdFO9OjhdYpsjxAN/view?usp=sharing)
   _Working paper_
