--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -23,24 +23,26 @@ import { Description } from '../components/description';
   competitions, and my work has been published in in various venues as well.
 </Description>
 
-## Substance Use Among Adolescents
+## Substance Use and Abuse Among the US Adolescent Population
 
+- "Parental Attitudes Towards Drugs and Offspring Use"
+  _Working paper_
 - ["A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"](https://drive.google.com/file/d/1YQ4q7meKBvRrOKHLzdFO9OjhdYpsjxAN/view?usp=sharing)
   _Working paper_
 
-## Predicting and Understanding Opioid Use Disorder
+## Opioid Use Disorder among the US Adult Population
 
 - ["Understanding Opioid Use Disorder using tree-based classifiers”](https://doi.org/10.1016/j.drugalcdep.2020.107839)
   _Drug and Alcohol Dependence, March 2020_
 - ["Predicting Opioid Use Disorder (OUD) Using A Random Forest"](https://doi.org/10.1109/COMPSAC.2019.00161)
   _Proc. of IEEE COMPSAC, July 2019_
 
-## Predicting and Understanding Suicidal Ideation
+## Suicidal Ideation among the US Adult Population
 
 - “Predicting Suicidal Ideation using Decision Trees”
   _Presented paper at the National Junior Science and Humanities Symposium_
 
-## The Demographic Divide in Advanced Placement Subjects
+## Exploring the Demographic Divide in the Advanced Placement Curriculum
 
 - ["Grade-level participation in the AP curriculum"](https://doi.org/10.1109/ISECon.2018.8340512)
   _Proc. of IEEE Integrated STEM Education Conference, March 2018_
