--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,19 +11,23 @@ import { Mail, File } from 'react-feather';
       }
   }}>
 
+
 <Box sx={{
   display: ['none', 'block'],
 }}>
+
 
 ![Adway](/adway.png)
 
 </Box>
 
+
 <div>
+
 
 # Hi, I'm Adway.
 
-Here's my story: I’m a rising senior at Saint John’s High School in Shrewsbury, Massachusetts. To put it broadly, I'm interested in studying what it means to be human using a quantitative approach. Right now, I'm fascinated with using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am in the process of researching behavior and feeling related to COVID-19 through social media. My work has been published in various professional academic publications and presented at national and international science research competitions.
+Here's my story: I’m a senior at Saint John’s High School in Shrewsbury, Massachusetts. To put it broadly, I'm interested in studying what it means to be human using a quantitative approach. Right now, I'm fascinated with using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am in the process of researching behavior and feeling related to COVID-19 through social media. My work has been published in various professional academic publications and presented at national and international science research competitions.
 
 Journalism offers me a very unique opportunity to engage with people by observing them in cultural and social settings. I am able to understand folks' hopes, dreams, and fears. My study of the human condition is complemented with exposure to the concerns and values of real people. Journalistic writing challenges me to get up from my desk, stop crunching numbers (and Doritos), and do some real-life learning. I am a writer and a photographer for the Community Advocate Newspaper and this year, I was accepted into the New England High School Journalism Collaborative Summer Workshop where my peers and I produced a newspaper in a week.
 
@@ -31,10 +35,12 @@ My passion for journalism as well as history drove me to submit a portfolio to s
 
 Apart from my scientific research, my photography, and my journalistic writing, I am the president of my school's Mock Trial team. Constitutional law is a budding interest of mine, and Mock Trial allows me to pursue important issues such as first amendment rights and racial profiling.
 
-My goal in life is simple: use my work to make the world a better, fairer place in which everyone can have a fair chance to prosper.
+My goal in life is simple: use my work to make the world a better, fairer, and safer place.
 
 If you've read up to here, thanks for indulging me! I'd love to meet you, so if you'd like to meet me, shoot me an email at [adway@adway.io](mailto:adway@adway.io).
 
 </div>
 
+
 </Container>
+
