--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -15,6 +15,7 @@ import { Description } from '../components/description';
     }
   }}>
 
+
 # Research
 
 <Description>
@@ -27,7 +28,7 @@ import { Description } from '../components/description';
 
 - "Parental Attitudes Towards Drugs and Offspring Use"
   _Working paper_
-- ["A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"](https://drive.google.com/file/d/1YQ4q7meKBvRrOKHLzdFO9OjhdYpsjxAN/view?usp=sharing)
+- ["A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"]
   _Working paper_
 
 ## Opioid Use Disorder among the US Adult Population
@@ -48,3 +49,4 @@ import { Description } from '../components/description';
   _Proc. of IEEE Integrated STEM Education Conference, March 2018_
 
 </Container>
+
