--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -28,7 +28,7 @@ import { Description } from '../components/description';
 
 - "Parental Attitudes Towards Drugs and Offspring Use"
   _Working paper_
-- ["A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"]
+- "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"
   _Working paper_
 
 ## Opioid Use Disorder among the US Adult Population
