--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,6 @@
 import { Container, Flex, Button, Box } from '@theme-ui/components';
 import { Mail, File } from 'react-feather';
+import { Social } from '../components/social';
 
 <Container
   sx={{
@@ -25,22 +26,18 @@ import { Mail, File } from 'react-feather';
 <div>
 
 
-# Hi, I'm Adway.
+I'm a senior at Saint John's High School interested in using quantitative methods for research in the social sciences. I have research and project experience mining large, public- and private-domain data sets to understand various issues related to human behavior.
 
-Here's my story: I’m a senior at Saint John’s High School in Shrewsbury, Massachusetts. To put it broadly, I'm interested in studying what it means to be human using a quantitative approach. Right now, I'm fascinated with using public domain data to understand mental illnesses and substance abuse disorders and in understanding historical texts using a computational approach. I am in the process of researching behavior and feeling related to COVID-19 through social media. My work has been published in various professional academic publications and presented at national and international science research competitions.
+My current research focuses on applying statistical techniques to uncover the origins of substance use disorders and mental illnesses among various cohorts. Specifically, I have studied opioid use disorder, suicidal ideation, and general substance use disorder among US adolescents and adults. More recently, I've been working on a narrower project understanding the role that parents play in the likelihood of adolescents developing various problems, not just limited to substance use disorder. The majority of my work has been done independently.
 
-Journalism offers me a very unique opportunity to engage with people by observing them in cultural and social settings. I am able to understand folks' hopes, dreams, and fears. My study of the human condition is complemented with exposure to the concerns and values of real people. Journalistic writing challenges me to get up from my desk, stop crunching numbers (and Doritos), and do some real-life learning. I am a writer and a photographer for the Community Advocate Newspaper and this year, I was accepted into the New England High School Journalism Collaborative Summer Workshop where my peers and I produced a newspaper in a week.
+During the COVID-19 pandemic and the recent push for long-needed racial equality in the US, I've been archiving and (slowly) annotating large data sets of social media posts centered around political and social events. My goal is to eventually use these large corpi of mini primary sources to computationally what people thought and how they expressed it during these major events.
 
-My passion for journalism as well as history drove me to submit a portfolio to serve as the Photographer in Residence for the Town of Westborough. I document Westborough's history as it happens through photography. You can read my vision statement for this project [here](/vision.pdf). The photos that I take for this project will be posted [here](https://instagram.com/thewestborougharchive), although the account is not nearly as updated as it should be. At the end of my term (which will now officially end when the program is restructured after the pandemic), I will compile all of my photographs from the past year into a book and submit it to the Town archives. I am honored to create primary sources so that future citizens of Westborough and historians can take a look at what small-town Massachusetts was like years and years ago!
-
-Apart from my scientific research, my photography, and my journalistic writing, I am the president of my school's Mock Trial team. Constitutional law is a budding interest of mine, and Mock Trial allows me to pursue important issues such as first amendment rights and racial profiling.
-
-My goal in life is simple: use my work to make the world a better, fairer, and safer place.
-
-If you've read up to here, thanks for indulging me! I'd love to meet you, so if you'd like to meet me, shoot me an email at [adway@adway.io](mailto:adway@adway.io).
+Apart from my research, I'm passionate about journalism and history. I write for the Community Advocate and engage in archival photography for the the Town of Westborough's archives.
 
 </div>
 
+
+<Social />
 
 </Container>
 
