--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -18,14 +18,12 @@ import { Description } from '../components/description';
     
   }}>
 
+
 # Journalism
 
 <Description sx={{ em: { color: 'text', display: 'inline' } }}>
   Below is a sample of news and opinion articles that I have published in
-  various venues. Most of my journalistic work is published in{' '}
-  <em>The Community Advocate</em>. This year, I attended the New England High
-  School Journalism Collaborative Summer Workshop where I produced{' '}
-  <em>The Vanguard</em> with my peers, writing for this newspaper as well.
+  various venues.
 </Description>
 
 ## The Vanguard
@@ -65,3 +63,4 @@ import { Description } from '../components/description';
   _May 8, 2018_
 
 </Container>
+
