New paper and other things

--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -15,7 +15,6 @@ import { Description } from '../components/description';
     }
   }}>
 
-
 # Research
 
 <Description>
@@ -28,14 +27,14 @@ import { Description } from '../components/description';
 
 - "Parental Attitudes Towards Drugs and Offspring Use"
   _Working paper_
-- "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents"
-  _Working paper_
+- "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents" [[pdf]](https://www.dropbox.com/s/rsspstuudwxv8fz/IEEE%3AACM%20ASONAM%20%28December%2C%202020%29.pdf?dl=0)
+  _Forthcoming in the Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining_
 
 ## Opioid Use Disorder among the US Adult Population
 
-- ["Understanding Opioid Use Disorder using tree-based classifiers”](https://doi.org/10.1016/j.drugalcdep.2020.107839)
+- "Understanding Opioid Use Disorder using tree-based classifiers” [[pdf]](https://www.dropbox.com/s/nn3g2xy7kdivnul/Drug%20and%20Alcohol%20Dependence%20%28March%201%2C%202020%29.pdf?dl=0)
   _Drug and Alcohol Dependence, March 2020_
-- ["Predicting Opioid Use Disorder (OUD) Using A Random Forest"](https://doi.org/10.1109/COMPSAC.2019.00161)
+- "Predicting Opioid Use Disorder (OUD) Using A Random Forest" [[pdf]](https://www.dropbox.com/s/gk8iaah0bicmzbv/IEEE%20COMPSAC%20%28July%2C%202019%29.pdf?dl=0)
   _Proc. of IEEE COMPSAC, July 2019_
 
 ## Suicidal Ideation among the US Adult Population
@@ -45,8 +44,7 @@ import { Description } from '../components/description';
 
 ## Exploring the Demographic Divide in the Advanced Placement Curriculum
 
-- ["Grade-level participation in the AP curriculum"](https://doi.org/10.1109/ISECon.2018.8340512)
+- "Grade-level participation in the AP curriculum" [[pdf]](https://www.dropbox.com/s/28q4ru5f7d9ste4/IEEE%20ISEC%20%28March%2C%202018%29.pdf?dl=0)
   _Proc. of IEEE Integrated STEM Education Conference, March 2018_
 
 </Container>
-
