Edit paper name

--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -25,7 +25,7 @@ import { Description } from '../components/description';
 
 ## Substance Use and Abuse Among the US Adolescent Population
 
-- "Parental Attitudes Towards Drugs and Offspring Use"
+- "Association of Perceived Parental Attitudes Towards Substance Use and Offspring Use of Tobacco, Alcohol, Marijuana and Other Drugs"
   _Working paper_
 - "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents" [[pdf]](https://www.dropbox.com/s/rsspstuudwxv8fz/IEEE%3AACM%20ASONAM%20%28December%2C%202020%29.pdf?dl=0)
   _Forthcoming in the Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining_
