--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -8,10 +8,12 @@ import { Description } from '../components/description';
   
   sx={{
     h2: { mb: 2, fontSize: 1 },
-    em: { color: 'muted', display: 'block' },
     a: {
       color: 'text',
       
+    },
+    li: {
+      pb: 3
     }
   }}>
 
@@ -23,28 +25,24 @@ import { Description } from '../components/description';
   competitions, and my work has been published in in various venues as well.
 </Description>
 
-## Substance Use and Abuse Among the US Adolescent Population
+## Peer-Reviewed Journal & Conference Publications
 
-- "Association of Perceived Parental Attitudes Towards Substance Use and Offspring Use of Tobacco, Alcohol, Marijuana and Other Drugs"
-  _Working paper_
-- "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents" [[pdf]](https://www.dropbox.com/s/rsspstuudwxv8fz/IEEE%3AACM%20ASONAM%20%28December%2C%202020%29.pdf?dl=0)
-  _Forthcoming in the Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining_
+1. A.S. Wadekar and B.K. Madras, "Association of Perceived Parental Attitudes Towards Substance Use and Offspring Use of Tobacco, Alcohol, Marijuana and Other Drugs,"
+   _Under Review_, 2020
 
-## Opioid Use Disorder among the US Adult Population
+2. A.S. Wadekar, "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents,"
+   _Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining (ASONAM)_, pp. 819-826 (December 2020) [[pdf]](/papers/asonam-12-20.pdf)
 
-- "Understanding Opioid Use Disorder using tree-based classifiers” [[pdf]](https://www.dropbox.com/s/nn3g2xy7kdivnul/Drug%20and%20Alcohol%20Dependence%20%28March%201%2C%202020%29.pdf?dl=0)
-  _Drug and Alcohol Dependence, March 2020_
-- "Predicting Opioid Use Disorder (OUD) Using A Random Forest" [[pdf]](https://www.dropbox.com/s/gk8iaah0bicmzbv/IEEE%20COMPSAC%20%28July%2C%202019%29.pdf?dl=0)
-  _Proc. of IEEE COMPSAC, July 2019_
+3. A.S. Wadekar, "Understanding Opioid Use Disorder using tree-based classifiers,”
+   _Drug and Alcohol Dependence_ vol. 208 no. 107839 (March 2020) [[pdf]](/papers/dad-03-20.pdf)
 
-## Suicidal Ideation among the US Adult Population
+4. A.S. Wadekar, "Predicting Opioid Use Disorder (OUD) Using A Random Forest,"
+   _Proc. of IEEE Intl. Conf. on Computers, Software, and Applications (COMPSAC)_, pp. 960-961 (July 2019) [[pdf]](/papers/compsac-07-19.pdf)
 
-- “Predicting Suicidal Ideation using Decision Trees”
-  _Presented paper at the National Junior Science and Humanities Symposium_
+5. “Predicting Suicidal Ideation using Decision Trees”
+   _Presented paper at the National Junior Science and Humanities Symposium_
 
-## Exploring the Demographic Divide in the Advanced Placement Curriculum
-
-- "Grade-level participation in the AP curriculum" [[pdf]](https://www.dropbox.com/s/28q4ru5f7d9ste4/IEEE%20ISEC%20%28March%2C%202018%29.pdf?dl=0)
-  _Proc. of IEEE Integrated STEM Education Conference, March 2018_
+6. A.S. Wadekar, "Grade-level participation in the AP curriculum,"
+   _Proc. of IEEE Integrated STEM Education Conference (ISEC)_, pp. 98-103 (March 2018) [[pdf]](/papers/isec-03-18.pdf)
 
 </Container>
