--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -31,7 +31,7 @@ import { Description } from '../components/description';
    _Under Review_, 2020
 
 2. A.S. Wadekar, "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents,"
-   _Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining (ASONAM)_, pp. 819-826 (December 2020) [[pdf]](/papers/asonam-12-20.pdf)
+   _Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining (ASONAM)_, pp. 819-826 (December 2020) [[pdf]](/papers/asonam-12-20.pdf) [[slides]](/papers/asonam-12-20-slides.pdf)
 
 3. A.S. Wadekar, "Understanding Opioid Use Disorder using tree-based classifiers,”
    _Drug and Alcohol Dependence_ vol. 208 no. 107839 (March 2020) [[pdf]](/papers/dad-03-20.pdf)
