--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -30,7 +30,7 @@ import { Description } from '../components/description';
 1. A.S. Wadekar and B.K. Madras, "Association of Perceived Parental Attitudes Towards Substance Use and Offspring Use of Tobacco, Alcohol, Marijuana and Other Drugs,"
    _Under Review_, 2020
 
-2. A.S. Wadekar, "A Psychosocial Approach to Understanding the Etiology of Substance Use Disorders among Adolescents,"
+2. A.S. Wadekar, "A Psychosocial Approach to Predicting Substance Use Disorder (SUD) Among Adolescents,"
    _Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining (ASONAM)_, pp. 819-826 (December 2020) [[pdf]](/papers/asonam-12-20.pdf) [[slides]](/papers/asonam-12-20-slides.pdf)
 
 3. A.S. Wadekar, "Understanding Opioid Use Disorder using tree-based classifiers,”
