--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,7 +22,7 @@ import { Social } from '../components/social';
 
 <div>
 
-I'm a senior at Saint John's High School interested in developing and using quantitative methods for research in the social sciences. I have research and project experience mining large, public- and private-domain data sets to understand various issues related to human behavior.
+I'm an incoming undergraduate student at Duke University studying Public Policy, Statistical Science, and History. I am interested in developing and using quantitative methods for research in the social sciences. I have research and project experience mining large, public- and private-domain data sets to understand various issues related to human behavior.
 
 My current research focuses on applying statistical techniques to uncover the origins of substance use disorders and mental illnesses among various cohorts. Specifically, I have studied opioid use disorder, suicidal ideation, and general substance use disorder among US adolescents and adults. More recently, I've been working on a narrower project understanding the role that parents play in the likelihood of adolescents developing various problems, not just limited to substance use disorder. I'm also looking at different ways to evaluate the efficacy of robust predctive models while taking into account complex survey design. The majority of my work has been done independently.
 
