--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,13 +22,13 @@ import { Social } from '../components/social';
 
 <div>
 
-I'm currently a senior at Saint John's High School in Massachusetts, interested in developing and using quantitative methods for research in the social sciences. I have research and project experience mining large, public- and private-domain data sets to understand various issues related to human behavior.
+I am an incoming first-year undergraduate student at Duke University planning on studying statistical science, public policy, and history. I am interested in developing and using quantitative methods for research in the social sciences. I have research and project experience mining large, public- and private-domain data sets to understand various issues related to human behavior.
 
 My current research focuses on applying statistical techniques to uncover the origins of substance use disorders and mental illnesses among various cohorts. Specifically, I have studied opioid use disorder, suicidal ideation, and general substance use disorder among US adolescents and adults. More recently, I've been working on a narrower project understanding the role that parents play in the likelihood of adolescents developing various problems, not just limited to substance use disorder. I'm also looking at different ways to evaluate the efficacy of robust predctive models while taking into account complex survey design. The majority of my work has been done independently.
 
 During the COVID-19 pandemic and the recent push for long-needed racial equality in the US, I've been archiving and (slowly) annotating large data sets of social media posts centered around political and social events. My goal is to eventually use these large corpi of mini primary sources to computationally understand what people thought and how they expressed it during these major events.
 
-Apart from my research, I'm passionate about journalism and history. I write for the Community Advocate and I engage in archival photography by serving as the Photographer in Residence for the Town of Westborough.
+Apart from my quantitative research, I'm passionate about journalism and history. I write for the _Community Advocate_ and I have engaged in archival photography by serving as the Photographer-in-Residence for the Town of Westborough.
 
 </div>
 
