Add chronicle + links

--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -26,7 +26,14 @@ import { Description } from '../components/description';
   various venues.
 </Description>
 
-## The Vanguard
+## [The Chronicle](https://dukechronicle.com)
+
+- ["2021 Virginia Tech football season preview"](https://www.dukechronicle.com/article/2021/09/virginia-tech-football-season-preview-duke-football)
+  _September 2, 2021_
+- ["X-Factor: Mataeo Durant's leadership will carry Duke offense through first-game jitters"](https://www.dukechronicle.com/article/2021/09/duke-football-charlotte-x-factor-mataeo-durant-markees-watts)
+  _September 1, 2021_
+
+## [The Vanguard](http://nehsjc.org/Vanguard)
 
 - ["Just Miles Away but Worlds Apart: Education in the Time of the Coronavirus"](http://www.nehsjc.org/Vanguard/headline-goes-here-14/)
   _June 26, 2020_
@@ -34,10 +41,10 @@ import { Description } from '../components/description';
 - ["Protests Spotlight First Amendment Right to Peaceable Assembly"](http://www.nehsjc.org/Vanguard/headline-goes-here-13/)
   _June 25, 2020_
 
-- ["Changing World, Changing Journalism" (with Sofia Mendes)](http://www.nehsjc.org/Vanguard/headline-goes-here-11/)
+- ["Changing World, Changing Journalism"](http://www.nehsjc.org/Vanguard/headline-goes-here-11/)
   _June 24, 2020_
 
-## The Community Advocate
+## [The Community Advocate](https://communityadvocate.com)
 
 - ["Mass. Academy of Math and Science student earns trip to international science fair"](https://www.communityadvocate.com/2020/07/15/mass-academy-of-math-and-science-student-earns-trip-to-international-science-fair/)
   _July 15, 2020_
