--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -26,10 +26,12 @@ import { Description } from '../components/description';
   various venues.
 </Description>
 
-## [The Chronicle](https://dukechronicle.com)
+## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
-- ["2021 Virginia Tech football season preview"](https://www.dukechronicle.com/article/2021/09/virginia-tech-football-season-preview-duke-football)
-  _September 2, 2021_
+- ["More buck for your Brodhead: Students express frustration towards rising dining prices"](https://www.dukechronicle.com/article/2021/09/duke-university-restaurants-wu-brodhead-center-cafeteria-dining-meal-plan-prices-pitchforks-expensive)
+  _September 21, 2021_
+- ["5 things to know before Duke football's clash against Northwestern"](https://www.dukechronicle.com/article/2021/09/duke-football-northwestern-football-durant-holmberg-cutcliffe)
+  _September 15, 2021_
 - ["X-Factor: Mataeo Durant's leadership will carry Duke offense through first-game jitters"](https://www.dukechronicle.com/article/2021/09/duke-football-charlotte-x-factor-mataeo-durant-markees-watts)
   _September 1, 2021_
 
