--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -28,6 +28,8 @@ import { Description } from '../components/description';
 
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
+- ["Students fined hundreds of dollars for not moving cars for football games, not excused for inability to pay"](https://www.dukechronicle.com/article/2021/09/duke-university-parking-transportation-services-blue-zone-lot-fine-football-games-permit-pass)
+  _September 27, 2021_
 - ["More buck for your Brodhead: Students express frustration towards rising dining prices"](https://www.dukechronicle.com/article/2021/09/duke-university-restaurants-wu-brodhead-center-cafeteria-dining-meal-plan-prices-pitchforks-expensive)
   _September 21, 2021_
 - ["5 things to know before Duke football's clash against Northwestern"](https://www.dukechronicle.com/article/2021/09/duke-football-northwestern-football-durant-holmberg-cutcliffe)
