--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -27,7 +27,7 @@ My current research focuses on applying statistical techniques to uncover the or
 
 During the COVID-19 pandemic and the recent push for long-needed racial equality in the US, I've been archiving and (slowly) annotating large data sets of social media posts centered around political and social events. My goal is to eventually use these large corpi of mini primary sources to computationally understand what people thought and how they expressed it during these major events.
 
-Apart from my quantitative research, I'm passionate about journalism and am a sports enthusiast. At Duke, I cover university news and sports for _The Chronicle_ and work as a data analyst for the Men's Basketball Team. In high school, I wrote for the _Community Advocate_ and I engaged in archival photography by serving as the Photographer-in-Residence for the Town of Westborough.
+Apart from my quantitative research, I'm passionate about journalism and am a sports enthusiast. At Duke, I cover university news and sports for _The Chronicle_ and work as a data analyst for men's basketball team. I previously wrote for the _Community Advocate_ took archival photos while serving as the Photographer-in-Residence for the Town of Westborough.
 
 </div>
 
